--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-feather": "^2.0.10",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.1",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
